{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 254,
  "lineage": "189b895c-7ae9-fe3d-4c17-8412f0b03821",
  "resources": [
    {
      "module": "module.terraform-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab0629dba5ae551d",
            "arn": "arn:aws:ec2:us-east-2:511574924293:instance/i-01b2dbab07d332be0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b2dbab07d332be0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093c5397d2d06f1a6",
            "private_dns": "ip-10-0-1-254.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-18-219-221-220.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.221.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6800eb5e436b308",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eebdaac20ccb2e72",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-1",
              "Owner": "Sree"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-1",
              "Owner": "Sree"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09181a69aad26e03e"
            ]
          },
          "dependencies": [
            "module.terraform-testvpc.aws_security_group.allow_all",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab0629dba5ae551d",
            "arn": "arn:aws:ec2:us-east-2:511574924293:instance/i-09edf8b4c3f8bf623",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09edf8b4c3f8bf623",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08039883d0a2f4dc6",
            "private_dns": "ip-10-0-2-112.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.112",
            "public_dns": "ec2-3-15-37-156.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.37.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e294dd3ea92d5d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0911ce0e5d7b89ffa",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-2",
              "Owner": "Sree"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-2",
              "Owner": "Sree"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09181a69aad26e03e"
            ]
          },
          "dependencies": [
            "module.terraform-testvpc.aws_security_group.allow_all",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab0629dba5ae551d",
            "arn": "arn:aws:ec2:us-east-2:511574924293:instance/i-0dcc5cd28baa48663",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcc5cd28baa48663",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06af9c4f5ded55f5d",
            "private_dns": "ip-10-0-3-113.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.113",
            "public_dns": "ec2-3-21-55-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.55.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e051465d6405325",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048aeae2bced27b7d",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-3",
              "Owner": "Sree"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "server-3",
              "Owner": "Sree"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09181a69aad26e03e"
            ]
          },
          "dependencies": [
            "module.terraform-testvpc.aws_security_group.allow_all",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:internet-gateway/igw-0cd2473ac27f00ef9",
            "id": "igw-0cd2473ac27f00ef9",
            "owner_id": "511574924293",
            "tags": {
              "Name": "my-aws_internet_gateway"
            },
            "tags_all": {
              "Name": "my-aws_internet_gateway"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:route-table/rtb-0c794781f0c57dd8c",
            "id": "rtb-0c794781f0c57dd8c",
            "owner_id": "511574924293",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-routing-table"
            },
            "tags_all": {
              "Name": "private-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:route-table/rtb-04b8c817c50306856",
            "id": "rtb-04b8c817c50306856",
            "owner_id": "511574924293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd2473ac27f00ef9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-routing-table"
            },
            "tags_all": {
              "Name": "public-routing-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-testvpc.aws_internet_gateway.gw",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0696968e4d6b46cac",
            "route_table_id": "rtb-0c794781f0c57dd8c",
            "subnet_id": "subnet-0542f693fca4c40aa"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_route_table.terraform-private",
            "module.terraform-testvpc.aws_subnet.subnet-private",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f8257daaf825f5",
            "route_table_id": "rtb-0c794781f0c57dd8c",
            "subnet_id": "subnet-0841128848816fe69"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_route_table.terraform-private",
            "module.terraform-testvpc.aws_subnet.subnet-private",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a581d5a99e1076fa",
            "route_table_id": "rtb-0c794781f0c57dd8c",
            "subnet_id": "subnet-065514bfec1d58fe0"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_route_table.terraform-private",
            "module.terraform-testvpc.aws_subnet.subnet-private",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09608106876664728",
            "route_table_id": "rtb-04b8c817c50306856",
            "subnet_id": "subnet-0eebdaac20ccb2e72"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_internet_gateway.gw",
            "module.terraform-testvpc.aws_route_table.terraform-public",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c63b5c4a178f7fe",
            "route_table_id": "rtb-04b8c817c50306856",
            "subnet_id": "subnet-0911ce0e5d7b89ffa"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_internet_gateway.gw",
            "module.terraform-testvpc.aws_route_table.terraform-public",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fa163dd17a6a1a5",
            "route_table_id": "rtb-04b8c817c50306856",
            "subnet_id": "subnet-048aeae2bced27b7d"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_internet_gateway.gw",
            "module.terraform-testvpc.aws_route_table.terraform-public",
            "module.terraform-testvpc.aws_subnet.subnet-public",
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:security-group/sg-09181a69aad26e03e",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09181a69aad26e03e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "511574924293",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-0542f693fca4c40aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0542f693fca4c40aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-1"
            },
            "tags_all": {
              "Name": "server-1"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-0841128848816fe69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0841128848816fe69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-2"
            },
            "tags_all": {
              "Name": "server-2"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-065514bfec1d58fe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065514bfec1d58fe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-3"
            },
            "tags_all": {
              "Name": "server-3"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-0eebdaac20ccb2e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eebdaac20ccb2e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-1"
            },
            "tags_all": {
              "Name": "server-1"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-0911ce0e5d7b89ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911ce0e5d7b89ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-2"
            },
            "tags_all": {
              "Name": "server-2"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:subnet/subnet-048aeae2bced27b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048aeae2bced27b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511574924293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server-3"
            },
            "tags_all": {
              "Name": "server-3"
            },
            "vpc_id": "vpc-07b3022fd9d30d0cf"
          },
          "dependencies": [
            "module.terraform-testvpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-testvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511574924293:vpc/vpc-07b3022fd9d30d0cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b39e73d7ff8ac05a",
            "default_route_table_id": "rtb-06ba467147adc68de",
            "default_security_group_id": "sg-00d23c2c5848a2c09",
            "dhcp_options_id": "dopt-0f01c58f4b23aafa1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b3022fd9d30d0cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ba467147adc68de",
            "owner_id": "511574924293",
            "tags": {
              "Name": "my-test-vpc",
              "Owner": "sasidhar"
            },
            "tags_all": {
              "Name": "my-test-vpc",
              "Owner": "sasidhar"
            }
          }
        }
      ]
    }
  ]
}